hphp/hack/test/typecheck/typehole/typehole_trusted/T153338497.php.exp
ERROR: File "T153338497.php", line 15, characters 91-94:
Type access is only valid for a class, `self`, or `this`. To relate type parameters and type constants, you likely want to use the 'with refinement' feature instead. (Naming[2129])
ERROR: File "T153338497.php", line 23, characters 12-18:
Invalid argument (Typing[4110])
  File "T153338497.php", line 15, characters 91-102:
  Expected `TBox::TInner`
  File "T153338497.php", line 23, characters 12-18:
  But got `string`
